--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-boxicons": "^0.0.28",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
   },
